tests/expectations/parser/tests/annotations_fail.out
Error [EPAR0370005]: expected ')', ',' -- found 'oops'
    --> test:19:76
     |
  19 | @failing_annotation(some_key = "SomeString", another_key = "AnotherString" oops)
     |                                                                            ^^^^
